Product linkage: We use a bootstrap label to inform about the attribute value type in grids

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1192,10 +1192,9 @@ table.order-edit td {
 }
 
 .color-container {
-	cursor: pointer;
-	padding: 4px;
 	background-color: transparent;
-	display: inline-block;
+	line-height: 10px;
+	padding-right: 6px;
 	.color {
 		width: 10px;
 		height: 10px;
@@ -1203,10 +1202,10 @@ table.order-edit td {
 		border: 1px solid #646464;
 	}
 }
-.color-label {
-    vertical-align: text-bottom;
-    padding-left: 4px;
+.color-container + span {
+	vertical-align: middle;
 }
+
 
 /* On/Off switch button
 -------------------------------------------------------------- */
