--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -365,10 +365,14 @@ input[type="color"],
 }
 
 .label-smnet {
-	margin-right: 4px;
+	margin-right: 5px;
 }
 .label-smnet-hide {
 	display: none;
+}
+.label-smnet + span,
+.label-smnet + a {
+	vertical-align: middle;
 }
 
 // JQUERY UI STUFF
