--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/EditAttributeValues.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/EditAttributeValues.cshtml
@@ -29,42 +29,24 @@
                             })
                             .Columns(columns =>
                             {
-                                columns
-                                    .Bound(x => x.Name)
-                                    .Template(@<text>
-                                        @if(!String.IsNullOrEmpty(item.ColorSquaresRgb)){
-                                            <div><span class="color-container"><span class="color" style="background:@item.ColorSquaresRgb">&nbsp;</span></span><span class="color-label">@item.Name</span></div>
-                                        } 
-                                        else 
-                                        {
-                                            <div>@item.Name</div>
-                                        }
-                                    </text>)
-                                    .ClientTemplate(
-                                        "<# if(ColorSquaresRgb && ColorSquaresRgb.length > 0) {#>" +
-                                        "<span class=\"color-container\"><span class=\"color\" style=\"background:<#= ColorSquaresRgb #>\">&nbsp;</span></span>" + 
-                                        "<span class=\"color-label\"><#= Name #></span>" +
-                                        "<# } else { #>" +
-                                        "<span class=\"color-label\"><#= Name #></span>" +
-                                        "<# } #>"
-                                        )
-                                    .Width(300);
-
-                                columns.Bound(x => x.Alias)
-                                    .Width(200);
+								columns
+									.Bound(x => x.Name)
+									.Template(x => @Html.LabeledVariantAttributeValueName(x.Name, x.ColorSquaresRgb, x.TypeName, x.TypeNameLabelHint))
+									.ClientTemplate(@Html.LabeledVariantAttributeValueName());
+                                columns.Bound(x => x.Alias);
                                 columns.Bound(x => x.PriceAdjustmentString)
-                                    .Width(100)
+                                    .Width(80)
                                     .Centered();
                                 columns.Bound(x => x.WeightAdjustmentString)
-                                    .Width(100)
+                                    .Width(80)
                                     .Centered();
                                 columns.Bound(x => x.IsPreSelected)
-                                    .Width(100)
+                                    .Width(80)
                                     .Template(item => @Html.SymbolForBool(item.IsPreSelected))
                                     .ClientTemplate(@Html.SymbolForBool("IsPreSelected"))
                                     .Centered();
                                 columns.Bound(x => x.DisplayOrder)
-                                    .Width(100)
+                                    .Width(80)
                                     .Centered();
                                 columns.Bound(x => x.Id)
                                     .Width(50)
@@ -86,12 +68,14 @@
         </td>
     </tr>
     <tr>
-        <td style="padding-top: 12px">
-            <button class="btn btn-primary" type="submit" id="btnAddNewValue" name="btnAddNewValue" value="btnAddNewValue" onclick="javascript:OpenWindow('@(Url.Action("ProductAttributeValueCreatePopup", "Product", new { productAttributeAttributeId = Model.ProductVariantAttributeId, btnId = "btnRefresh", formId = "productvariantattribute-form" }))', 800, 600, true); return false;">
+        <td>
+            <button class="btn btn-primary btn-below" type="submit" id="btnAddNewValue" name="btnAddNewValue" value="btnAddNewValue" 
+				onclick="javascript:OpenWindow('@(Url.Action("ProductAttributeValueCreatePopup", "Product", new { productAttributeAttributeId = Model.ProductVariantAttributeId, btnId = "btnRefresh", formId = "productvariantattribute-form" }))', 800, 600, true); return false;">
                 <i class="icon-plus"></i>
                 @T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.AddNew")
             </button>
             <button type="submit" id="btnRefresh" name="btnRefresh" value="btnRefresh" class="hide" />
+
             <script type="text/javascript">
                 $(document).ready(function () {
                     $('#btnRefresh').click(function () {
