--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -22,6 +22,7 @@
 .al	                                { text-align: left !important;}
 .ac	                                { text-align: center !important;}
 .ar	                                { text-align: right !important;}
+.avm								{ vertical-align: middle; }
 
 
 // NICER PAGE TITLES & TYPO STUFF
