--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -22,7 +22,6 @@
 .al	                                { text-align: left !important;}
 .ac	                                { text-align: center !important;}
 .ar	                                { text-align: right !important;}
-.avm								{ vertical-align: middle; }
 
 
 // NICER PAGE TITLES & TYPO STUFF
@@ -215,6 +214,10 @@ nav li {
 }
 .btn-below {
 	margin-top: 3px !important;
+}
+.btn-label-left {
+	vertical-align: middle;
+	margin-right: 8px;
 }
 
 
