--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemAddPopup.cshtml
@@ -31,14 +31,21 @@
 		}
 	</div>
 
-    if (ViewBag.RefreshPage == true)
-    {
-        <script type="text/javascript">
+	<script type="text/javascript">	
+		@if (ViewBag.RefreshPage)
+		{
+			<text>
             try {window.opener.document.forms['@(ViewBag.formId)'].@(ViewBag.btnId).click();}
             catch (e){}
-            window.close();
-        </script>
-    }
+			</text>
+	    }
+		@if (ViewBag.RefreshPage && ViewBag.CloseWindow)
+		{
+			<text>
+			window.close();
+			</text>
+		}
+	</script>
 
     <table width="100%">
         <tr>
@@ -82,7 +89,10 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td class="adminTitle">
+                &nbsp;
+            </td>
+            <td class="adminData">
                 <button type="submit" id="search-products" value="search-products" class="btn">
                     <i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
                 </button>
