--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -107,7 +107,10 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td class="adminTitle">
+                &nbsp;
+            </td>
+            <td class="adminData">
                 <button type="submit" id="btnSearch" class="btn">
                     <i class="icon-search"></i>
                     @T("Admin.Common.Search")
@@ -115,8 +118,9 @@
             </td>
         </tr>
     </table>
-     <p>
-    </p>
+
+	<p></p>
+
     <table class="adminContent">
         <tr>
             <td>
