Product linkage: Replaced label for variant attribute value type by a link icon

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -673,6 +673,8 @@ label {
     line-height: 0;
 }
 
+.mr8 { margin-right: 8px; }
+
 /* MASTER HEADER */
 .header-menu,
 .status-bar {
@@ -1193,17 +1195,14 @@ table.order-edit td {
 
 .color-container {
 	background-color: transparent;
-	line-height: 10px;
 	padding-right: 6px;
 	.color {
 		width: 10px;
 		height: 10px;
+		line-height: 10px;
 		display: inline-block;
 		border: 1px solid #646464;
 	}
-}
-.color-container + span {
-	vertical-align: middle;
 }
 
 
