Product linkage: Setting to display the image of a linked product in front of the attribute value on product detail page. Currently only rendered with select boxes.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -635,6 +635,15 @@
                 @Html.ValidationMessageFor(model => model.ShowLinkedAttributeValueQuantity)
             </td>
         </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowLinkedAttributeValueImage)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowLinkedAttributeValueImage)
+                @Html.ValidationMessageFor(model => model.ShowLinkedAttributeValueImage)
+            </td>
+        </tr>
     </table>
 }    
 @helper TabProductSearchSettings()
