--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1918,6 +1918,11 @@ table.cart .cart-item-row .qty-input {
 	margin-right: 15px;
 }
 
+.attribute-value-image {
+	margin-right: 5px;
+	vertical-align: middle;
+}
+
 
 .product-details-page .qty-cnt {
 	margin-bottom: 5px;
