--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
@@ -71,7 +71,7 @@
 			<div id="linked-product-name">@Model.LinkedProductName</div>
 
 			<button id="add-product-linkage" type="button" class="btn btn-below"
-				onclick="javascript:OpenWindow('@(Url.Action("ProductAttributeValueLinkagePopup", "Product", new { openerProductId = Html.FieldIdFor(model => model.LinkedProductId), openerProductName = "linked-product-name" }))', 1000, 800, true); return false;">
+				onclick="javascript:OpenWindow('@(Url.Action("ProductAttributeValueLinkagePopup", "Product", new { openerProductId = Html.FieldIdFor(model => model.LinkedProductId), openerProductName = Html.FieldIdFor(model => model.Name) }))', 1000, 800, true); return false;">
 				<i class="icon-link"></i>&nbsp;@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.LinkProduct")
 			</button>
 			<button id="remove-product-linkage" type="button" class="btn btn-below">
