#190 App Restart: stay on current page

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -68,7 +68,7 @@
                         </a>
                     </li>
                     <li>
-                        <a id="restart-application" href="#" data-url="@Url.Action("RestartApplication", "Common")">
+                        <a id="restart-application" href="#" data-url="@Url.Action("RestartApplication", "Common", new { previousUrl = Request.RawUrl })">
                             <i class="icon-refresh"></i>
                             @T("Admin.Header.RestartApplication")
                         </a>
