--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -6,7 +6,6 @@
     var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
     var hideProfitReport = false;
     
-    //page title
     ViewBag.Title = T("Admin.Orders").Text;
 }
 
@@ -43,14 +42,6 @@
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CustomerEmail)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.CustomerEmail)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerName)
             </td>
             <td class="adminData">
@@ -59,26 +50,34 @@
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.OrderStatusId)
+                @Html.SmartLabelFor(model => model.CustomerEmail)
             </td>
             <td class="adminData">
-                @Html.DropDownList("OrderStatusId", Model.AvailableOrderStatuses)
+                @Html.EditorFor(model => Model.CustomerEmail)
+            </td>
+        </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.OrderStatusIds)
+			</td>
+			<td class="adminData">
+				@Html.DropDownList("OrderStatusIds", Model.AvailableOrderStatuses, null, new { multiple = "multiple" })
+			</td>
+		</tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.PaymentStatusIds)
+            </td>
+            <td class="adminData">
+				@Html.DropDownList("PaymentStatusIds", Model.AvailablePaymentStatuses, null, new { multiple = "multiple" })
             </td>
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.PaymentStatusId)
+                @Html.SmartLabelFor(model => model.ShippingStatusIds)
             </td>
             <td class="adminData">
-                @Html.DropDownList("PaymentStatusId", Model.AvailablePaymentStatuses)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShippingStatusId)
-            </td>
-            <td class="adminData">
-                @Html.DropDownList("ShippingStatusId", Model.AvailableShippingStatuses)
+                @Html.DropDownList("ShippingStatusIds", Model.AvailableShippingStatuses, null, new { multiple = "multiple" })
             </td>
         </tr>
        <tr>
@@ -155,15 +154,17 @@
 							columns.Bound(x => x.StoreName);
                             columns.Bound(x => x.CreatedOn);
                             columns.Bound(x => x.OrderTotal)
-                                 .FooterTemplate(
-                                 string.Format("<div><b>{0}:</b></div>" +
-                                 (hideProfitReport ? "{1}" : "<div>{1}: <span id=\"aggregator-profit-block\"></span></div>") +
-                                 "<div>{2}: <span id=\"aggregator-tax-block\"></span></div>" +
-                                 "<div>{3}: <span id=\"aggregator-total-block\"></span></div>",
-                                 @T("Admin.Orders.Report.Summary").Text,
-                                 (hideProfitReport ? "" : @T("Admin.Orders.Report.Profit").Text),
-                                 @T("Admin.Orders.Report.Tax").Text,
-                                 @T("Admin.Orders.Report.Total").Text));
+								.Width(180)
+								.RightAlign()
+								.FooterTemplate(
+									string.Format("<div><b>{0}:</b></div>" +
+									(hideProfitReport ? "{1}" : "<div>{1}: <span id=\"aggregator-profit-block\" class=\"pull-right\"></span></div>") +
+									"<div>{2}: <span id=\"aggregator-tax-block\" class=\"pull-right\"></span></div>" +
+									"<div>{3}: <span id=\"aggregator-total-block\" class=\"pull-right\"></span></div>",
+									@T("Admin.Orders.Report.Summary").Text,
+									(hideProfitReport ? "" : @T("Admin.Orders.Report.Profit").Text),
+									@T("Admin.Orders.Report.Tax").Text,
+									@T("Admin.Orders.Report.Total").Text));
                             columns.Bound(x => x.Id)
                                 .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", new { id = x.Id }))
                                 .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.View").Text + "</a>")
@@ -244,17 +245,17 @@
 
         function onDataBinding(e) {
             var searchModel = {
-                    StartDate: $('#@Html.FieldIdFor(model => model.StartDate)').val(),
-                    EndDate: $('#@Html.FieldIdFor(model => model.EndDate)').val(),
-            		CustomerEmail: $('#@Html.FieldIdFor(model => model.CustomerEmail)').val(),
-            		CustomerName: $('#@Html.FieldIdFor(model => model.CustomerName)').val(),
-                    OrderStatusId: $('#@Html.FieldIdFor(model => model.OrderStatusId)').val(),
-                    PaymentStatusId: $('#@Html.FieldIdFor(model => model.PaymentStatusId)').val(),
-            		ShippingStatusId: $('#@Html.FieldIdFor(model => model.ShippingStatusId)').val(),
-            		StoreId: $('#@Html.FieldIdFor(model => model.StoreId)').val(),
-                    OrderGuid: $('#@Html.FieldIdFor(model => model.OrderGuid)').val(),
-                    OrderNumber: $('#@Html.FieldIdFor(model => model.OrderNumber)').val()
-                    };
+				StartDate: $('#@Html.FieldIdFor(model => model.StartDate)').val(),
+				EndDate: $('#@Html.FieldIdFor(model => model.EndDate)').val(),
+				CustomerEmail: $('#@Html.FieldIdFor(model => model.CustomerEmail)').val(),
+            	CustomerName: $('#@Html.FieldIdFor(model => model.CustomerName)').val(),
+            	OrderStatusIds: jQuery.makeArray($('#@Html.FieldIdFor(model => model.OrderStatusIds)').val()).join(),
+            	PaymentStatusIds: jQuery.makeArray($('#@Html.FieldIdFor(model => model.PaymentStatusIds)').val()).join(),
+            	ShippingStatusIds: jQuery.makeArray($('#@Html.FieldIdFor(model => model.ShippingStatusIds)').val()).join(),
+				StoreId: $('#@Html.FieldIdFor(model => model.StoreId)').val(),
+				OrderGuid: $('#@Html.FieldIdFor(model => model.OrderGuid)').val(),
+				OrderNumber: $('#@Html.FieldIdFor(model => model.OrderNumber)').val()
+            };
             e.data = searchModel;
         }
     
