Cosmetic: Aligned the search button above grids beneath the form elements

--- a/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
@@ -53,8 +53,10 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
-                
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" id="btnSearch" class="btn">
                     <i class="icon-search"></i>
                     @T("Admin.Common.Search")
