--- a/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
@@ -26,7 +26,10 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2">
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+		<td class="adminData">
             <button type="submit" id="search-newsLetterSubscriptions" value="search-newsLetterSubscriptions"
                 class="btn"><i class="icon-search icon-white"></i>&nbsp;@T("Admin.Common.Search")</button>
         </td>
