--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
@@ -51,7 +51,10 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+            <td class="adminData">
                 <button type="submit" id="search-products" value="search-products" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
             </td>
         </tr>
