--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
@@ -24,7 +24,6 @@
             @Html.EditorFor(model => Model.SearchCategoryName)
         </td>
     </tr>
-	@*codehint: sm-add*@
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.SearchAlias)
@@ -34,7 +33,10 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2">
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+        <td class="adminData">
             <button type="submit" id="btnSearch" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
         </td>
     </tr>
