--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/List.cshtml
@@ -137,8 +137,11 @@
             </tr>
         } 
         <tr>
-            <td colspan="2">
-                <button type="submit" id="search-customers" name="search-customers" value="search-customers" class="t-button">@T("Admin.Common.Search")</button>
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
+				<button type="submit" id="search-customers" name="search-customers" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
             </td>
         </tr>
     </table>
