--- a/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/List.cshtml
@@ -38,7 +38,10 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" id="btnSearch" class="btn"><i class="icon-search icon-white"></i>&nbsp;@T("Admin.Common.Search")</button>
             </td>
         </tr>
