--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -26,7 +26,10 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2">
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+        <td class="adminData">
             <button type="submit" id="btnSearch" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
         </td>
     </tr>
