--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
@@ -23,7 +23,10 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2">
+        <td class="adminTitle">
+			&nbsp;
+		</td>
+		<td class="adminData">
 			<button type="button" id="search-topics" class="btn">
 				<i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
 			</button>
